WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97608
Fix Geolocation/window-close-crash.html and harden WebKitTestRunner for Geolocation
https://bugs.webkit.org/show_bug.cgi?id=97608
Summary
Fix Geolocation/window-close-crash.html and harden WebKitTestRunner for Geolo...
Benjamin Poulain
Reported
2012-09-25 14:52:11 PDT
All tests passing, yeeaaaahh! ;)
Attachments
Patch
(7.47 KB, patch)
2012-09-25 15:02 PDT
,
Benjamin Poulain
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2012-09-25 15:02:04 PDT
Created
attachment 165682
[details]
Patch
Benjamin Poulain
Comment 2
2012-10-03 14:45:50 PDT
Committed
r130325
: <
http://trac.webkit.org/changeset/130325
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug